--- a/sass/ui/_core.scss
+++ b/sass/ui/_core.scss
@@ -1,11 +1,11 @@
 /** Form (default form styles) **/
-@import 'form/index';
+@import 'form/core';
 
 /** Button (.button) **/
-@import 'button/index';
+@import 'button/core';
 
 /** Navigation */
-@import 'nav/index';
+@import 'nav/core';
 
 /** Card (.card) */
-@import 'card/index';
+@import 'card/core';
