--- a/sass/ui/button/_layout.scss
+++ b/sass/ui/button/_layout.scss
@@ -1,93 +1,99 @@
-button, #{$button-class} {
-  background: $button-background;
-  color: $button-color;
-  border-style: $button-border-style;
-  border-width: $button-border-width;
-  border-color: $button-border-color;
-  border-radius: $button-border-radius;
-  line-height: $button-line-height;
+@mixin button-init() {
+  @if not global-variable-exists(-BUTTON-LOADED) {
+    $-BUTTON-LOADED: true !global;
 
-  &.hover {
-    @extend %#{$button-name}--hover;
+    button, #{$button-class} {
+      background: $button-background;
+      color: $button-color;
+      border-style: $button-border-style;
+      border-width: $button-border-width;
+      border-color: $button-border-color;
+      border-radius: $button-border-radius;
+      line-height: $button-line-height;
+
+      &.hover {
+        @extend %#{$button-name}--hover;
+      }
+
+      &.active {
+        @extend %#{$button-name}--active;
+      }
+    }
+
+
+    .no-touchevents #{$button-class},
+    .no-touchevents button {
+      &:hover {
+        @extend %#{$button-name}--hover;
+      }
+
+      &:active {
+        @extend %#{$button-name}--active;
+      }
+    }
+
+
+    #{$button-class}--s,
+    #{$button-class}--s button,
+    #{$button-class}--s #{$button-class} {
+      @extend %#{$button-name}--s;
+    }
+
+
+    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--s {
+      padding: 0;
+    }
+
+
+    #{$button-class}--m,
+    #{$button-class}--m button,
+    #{$button-class}--m #{$button-class} {
+      @extend %#{$button-name}--m;
+    }
+
+
+    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--m {
+      padding: 0;
+    }
+
+
+    #{$button-class}--l,
+    #{$button-class}--l button,
+    #{$button-class}--l #{$button-class} {
+      @extend %#{$button-name}--l;
+    }
+
+
+    @include colorized-buttons();
+
+
+    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--l {
+      padding: 0;
+    }
+
+
+    #{$button-class}-group {
+      @extend .input-group;
+    }
+
+
+    #{$button-class}-group--grow {
+      @extend %#{$flex-name}--grow;
+    }
+
+
+    #{$button-class}-group--shrink {
+      @extend %#{$flex-name}--shrink;
+    }
+
+
+    #{$button-class}-group {
+      button {
+        @extend %#{$flex-name}--fluid;
+      }
+    }
+
+
+    @include extend-flex(#{$button-name}-group, (#{$button-class}-group));
   }
-
-  &.active {
-    @extend %#{$button-name}--active;
-  }
 }
-
-
-.no-touchevents #{$button-class},
-.no-touchevents button {
-  &:hover {
-    @extend %#{$button-name}--hover;
-  }
-
-  &:active {
-    @extend %#{$button-name}--active;
-  }
-}
-
-
-#{$button-class}--s,
-#{$button-class}--s button,
-#{$button-class}--s #{$button-class} {
-  @extend %#{$button-name}--s;
-}
-
-
-#{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--s {
-  padding: 0;
-}
-
-
-#{$button-class}--m,
-#{$button-class}--m button,
-#{$button-class}--m #{$button-class} {
-  @extend %#{$button-name}--m;
-}
-
-
-#{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--m {
-  padding: 0;
-}
-
-
-#{$button-class}--l,
-#{$button-class}--l button,
-#{$button-class}--l #{$button-class} {
-  @extend %#{$button-name}--l;
-}
-
-
-@include colorized-buttons();
-
-
-#{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--l {
-  padding: 0;
-}
-
-
-#{$button-class}-group {
-  @extend .input-group;
-}
-
-
-#{$button-class}-group--grow {
-  @extend %#{$flex-name}--grow;
-}
-
-
-#{$button-class}-group--shrink {
-  @extend %#{$flex-name}--shrink;
-}
-
-
-#{$button-class}-group {
-  button {
-    @extend %#{$flex-name}--fluid;
-  }
-}
-
-
-@include extend-flex(#{$button-name}-group, (#{$button-class}-group));
