--- a/sass/ui/nav/_core.scss
+++ b/sass/ui/nav/_core.scss
@@ -1,8 +1,8 @@
 /** Dropdown (.dropdown) **/
-@import 'dropdown/index';
+@import 'dropdown/core';
 
 /** Navbar (.navbar) **/
-@import 'bar/index';
+@import 'bar/core';
 
 /** Paginate (.paginate) **/
-@import 'paginate/index';
+@import 'paginate/core';
