--- a/sass/ui/form/checkbox/_layout.scss
+++ b/sass/ui/form/checkbox/_layout.scss
@@ -1,91 +1,97 @@
-#{$checkbox-class} {
-  @extend %#{$flex-name};
-  @extend %#{$flex-name}--y-center;
-  padding: 0 8px;
+@mixin checkbox-init() {
+  @if not global-variable-exists(-CHECKBOX-LOADED) {
+    $-CHECKBOX-LOADED: true;
+    
+    #{$checkbox-class} {
+      @extend %#{$flex-name};
+      @extend %#{$flex-name}--y-center;
+      padding: 0 8px;
 
-  input[type=checkbox] {
-    display: none;
-  }
-}
+      input[type=checkbox] {
+        display: none;
+      }
+    }
 
-$checkbox-checkmark-height: 24px;
-$checkbox-checkmark-width: 24px;
+    $checkbox-checkmark-height: 24px;
+    $checkbox-checkmark-width: 24px;
 
-#{$checkbox-class} label {
-  @extend %#{$flex-name};
-  padding: 0 0 0 8px;
-  @include font-line(16px, 100%);
+    #{$checkbox-class} label {
+      @extend %#{$flex-name};
+      padding: 0 0 0 8px;
+      @include font-line(16px, 100%);
 
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-
-#{$checkbox-class}__box {
-  @extend %hardware-accel;
-  @extend %#{$flex-name};
-  @extend %#{$flex-name}--y-center;
-  @extend %#{$flex-name}--x-center;
-  border-width: 1px;
-  border-style: solid;
-  border-color: $light-border;
-  background: $light-grey;
-  color: $blue;
-  border-radius: $MAX-PX;
-  height: $checkbox-checkmark-height;
-  width: $checkbox-checkmark-width;
-  @include transition(background $FAST linear);
-
-  & > * {
-    @extend %#{$flex-name};
-  }
-
-  &:hover {
-    cursor: pointer;
-  }
-}
+      &:hover {
+        cursor: pointer;
+      }
+    }
 
 
-.no-touchevents {
-  #{$checkbox-class}__box:hover #{$checkbox-class}__checkmark {
-    visibility: visible;
-    opacity: 0.5;
-  }
+    #{$checkbox-class}__box {
+      @extend %hardware-accel;
+      @extend %#{$flex-name};
+      @extend %#{$flex-name}--y-center;
+      @extend %#{$flex-name}--x-center;
+      border-width: 1px;
+      border-style: solid;
+      border-color: $light-border;
+      background: $light-grey;
+      color: $blue;
+      border-radius: $MAX-PX;
+      height: $checkbox-checkmark-height;
+      width: $checkbox-checkmark-width;
+      @include transition(background $FAST linear);
 
-  #{$checkbox-class}.checked #{$checkbox-class}__box:hover
-  #{$checkbox-class}__checkmark {
-    opacity: 1.0;
-  }
-}
+      & > * {
+        @extend %#{$flex-name};
+      }
 
-
-#{$checkbox-class}__checkmark {
-  @extend %hardware-accel;
-  @extend %#{$flex-name};
-  @extend %#{$flex-name}--y-center;
-  @extend %#{$flex-name}--x-center;
-  @extend %fade-in;
-  color: $white;
-  visibility: hidden;
-  opacity: 0;
-
-  & > * {
-    @extend %#{$flex-name};
-  }
-}
+      &:hover {
+        cursor: pointer;
+      }
+    }
 
 
-#{$checkbox-class}.checked {
-  #{$checkbox-class}__checkmark {
-    @extend %fade-out;
-    visibility: visible;
-    opacity: 1.0;
-    color: $white;
-  }
+    .no-touchevents {
+      #{$checkbox-class}__box:hover #{$checkbox-class}__checkmark {
+        visibility: visible;
+        opacity: 0.5;
+      }
 
-  #{$checkbox-class}__box {
-    border-color: $blue;
-    background: $blue;
+      #{$checkbox-class}.checked #{$checkbox-class}__box:hover
+      #{$checkbox-class}__checkmark {
+        opacity: 1.0;
+      }
+    }
+
+
+    #{$checkbox-class}__checkmark {
+      @extend %hardware-accel;
+      @extend %#{$flex-name};
+      @extend %#{$flex-name}--y-center;
+      @extend %#{$flex-name}--x-center;
+      @extend %fade-in;
+      color: $white;
+      visibility: hidden;
+      opacity: 0;
+
+      & > * {
+        @extend %#{$flex-name};
+      }
+    }
+
+
+    #{$checkbox-class}.checked {
+      #{$checkbox-class}__checkmark {
+        @extend %fade-out;
+        visibility: visible;
+        opacity: 1.0;
+        color: $white;
+      }
+
+      #{$checkbox-class}__box {
+        border-color: $blue;
+        background: $blue;
+      }
+    }
   }
 }
