--- a/sass/ui/nav/dropdown/_layout.scss
+++ b/sass/ui/nav/dropdown/_layout.scss
@@ -1,210 +1,213 @@
-/**
- ** Dropdown
- **/
-#{$dropdown-class} {
-  @extend %#{$flex-name};
-  @extend %#{$flex-name}--y-center;
-  position: relative;
+@mixin dropdown-init() {
+  @if not global-variable-exists(-DROPDOWN-LOADED) {
+    $-DROPDOWN-LOADED: true !global;
 
-  &.dropped {
+    #{$dropdown-class} {
+      @extend %#{$flex-name};
+      @extend %#{$flex-name}--y-center;
+      position: relative;
+
+      &.dropped {
+        #{$dropdown-class}__menu {
+          @extend %drop-out--fast;
+          top: 100%;
+          margin-top: -1px;
+          visibility: visible;
+          opacity: 1.0;
+        }
+      }
+    }
+
+
+    .input-group, #{$button-class}-group {
+      & > #{$dropdown-class}:first-child:not(:last-child) #{$dropdown-class}__toggler {
+        border-top-right-radius: 0 !important;
+        border-bottom-right-radius: 0 !important;
+      }
+      & > #{$dropdown-class}:last-child:not(:first-child) #{$dropdown-class}__toggler {
+        border-left: 0 !important;
+        border-top-left-radius: 0 !important;
+        border-bottom-left-radius: 0 !important;
+      }
+      & > #{$dropdown-class}:not(:first-child):not(:last-child) #{$dropdown-class}__toggler {
+        border-left: 0 !important;
+        border-radius: 0 !important;
+      }
+      #{$dropdown-class} {
+        margin: 0;
+      }
+    }
+
+
+    #{$dropdown-class}__caret.fa-chevron-down,
+    #{$dropdown-class}__caret.fa-caret-down,
+    #{$dropdown-class}__caret.fa-angle-down {
+      @extend %#{$flex-name}--self-y-center;
+      @extend %#{$type-name}--s;
+    }
+
+
+    #{$dropdown-class}__caret {
+      @extend %hardware-accel;
+      @extend %transform--fast;
+      left: 6px;
+      top: 1px;
+      color: $dropdown-toggler-color;
+      position: relative;
+    }
+
+
+    .dropped #{$dropdown-class}__caret {
+      top: 1px;
+      @include transform(rotate(180deg));
+    }
+
+
+    #{$dropdown-class}__caret--left {
+      @extend #{$dropdown-class}__caret;
+      @extend %#{$flex-name}--first;
+      float: left;
+      margin-right: 6px;
+      margin-left: auto;
+    }
+
+
+    #{$dropdown-class}__caret--right {
+      @extend #{$dropdown-class}__caret;
+      @extend %#{$flex-name}--last;
+      float: right;
+      margin-left: 6px;
+    }
+
+
+    #{$dropdown-class}__caret--left.fa-chevron-down,
+    #{$dropdown-class}__caret--left.fa-caret-down,
+    #{$dropdown-class}__caret--right.fa-chevron-down,
+    #{$dropdown-class}__caret--right.fa-caret-down {
+      @extend #{$dropdown-class}__caret.fa-caret-down;
+      margin-top: 4%;
+    }
+
+
+    #{$dropdown-class}__toggler,
+    button#{$dropdown-class}__toggler,
+    #{$button-class}#{$dropdown-class}__toggler {
+      @extend %#{$flex-name}--y-center;
+      display: inline-block;
+      background: $dropdown-toggler-background;
+      color: $dropdown-toggler-color;
+      border-style: $dropdown-toggler-border-style;
+      border-width: $dropdown-toggler-border-width;
+      border-color: $dropdown-toggler-border-color;
+      border-radius: $dropdown-toggler-border-radius;
+      line-height: $dropdown-toggler-line-height;
+
+      &.hover {
+        @extend %#{$dropdown-name}__toggler--hover;
+      }
+
+      &.active {
+        @extend %#{$dropdown-name}__toggler--active;
+      }
+    }
+
+
+    #{$dropdown-class}.dropped #{$dropdown-class}__toggler,
+    .no-touchevents #{$dropdown-class}.dropped #{$dropdown-class}__toggler:hover {
+      @extend %#{$dropdown-name}__toggler--active;
+    }
+
+
+    .no-touchevents #{$dropdown-class}__toggler:not(.submit),
+    .no-touchevents #{$dropdown-class}__toggler:not([type=submit]):not(.submit) {
+      &:hover {
+        @extend %#{$dropdown-name}__toggler--hover;
+      }
+
+      &:active {
+        @extend %#{$dropdown-name}__toggler--active;
+      }
+    }
+
+
     #{$dropdown-class}__menu {
-      @extend %drop-out--fast;
-      top: 100%;
-      margin-top: -1px;
-      visibility: visible;
-      @include opacity(1.0);
+      @extend %absolute-top;
+      @extend %hardware-accel;
+      @extend %drop-in--fast;
+      visibility: hidden;
+      background: $dropdown-background;
+      border-color: $dropdown-border-color;
+      border-style: $dropdown-border-style;
+      border-width: $dropdown-border-width;
+      border-radius: $dropdown-border-radius;
+      padding: $dropdown-padding-top $dropdown-padding-right
+               $dropdown-padding-bottom $dropdown-padding-left;
+      width: $dropdown-width;
+      min-width: $dropdown-min-width;
+      text-align: $dropdown-text-align;
+      top: 200%;
+      z-index: $MAX-Z-INDEX;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      opacity: 0.0;
+      @include box-shadow($dropdown-shadow);
+
+      li {
+        a {
+          display: block;
+          clear: both;
+          white-space: nowrap;
+          color: $dropdown-link-color;
+          background: $dropdown-link-background;
+          border-color: $dropdown-link-border-color;
+          border-style: $dropdown-link-border-style;
+          border-width: $dropdown-link-border-width;
+          padding: $dropdown-link-padding-top $dropdown-link-padding-right
+                   $dropdown-link-padding-bottom $dropdown-link-padding-left;
+        }
+      }
     }
-  }
-}
 
 
-.input-group, #{$button-class}-group {
-  & > #{$dropdown-class}:first-child:not(:last-child) #{$dropdown-class}__toggler {
-    border-top-right-radius: 0 !important;
-    border-bottom-right-radius: 0 !important;
-  }
-  & > #{$dropdown-class}:last-child:not(:first-child) #{$dropdown-class}__toggler {
-    border-left: 0 !important;
-    border-top-left-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
-  }
-  & > #{$dropdown-class}:not(:first-child):not(:last-child) #{$dropdown-class}__toggler {
-    border-left: 0 !important;
-    border-radius: 0 !important;
-  }
-  #{$dropdown-class} {
-    margin: 0;
-  }
-}
+    .no-touchevents #{$dropdown-class}__menu li a {
+      &:hover {
+        color: $dropdown-link-hover-color;
+        background: $dropdown-link-hover-background;
+        border-color: $dropdown-link-hover-border-color;
+        border-style: $dropdown-link-hover-border-style;
+        border-width: $dropdown-link-hover-border-width;
+        padding: $dropdown-link-hover-padding-top
+                 $dropdown-link-hover-padding-right
+                 $dropdown-link-hover-padding-bottom
+                 $dropdown-link-hover-padding-left;
+      }
+
+      &:active {
+        color: $dropdown-link-active-color;
+        background: $dropdown-link-active-background;
+        border-color: $dropdown-link-active-border-color;
+        border-style: $dropdown-link-active-border-style;
+        border-width: $dropdown-link-active-border-width;
+        padding: $dropdown-link-active-padding-top
+                 $dropdown-link-active-padding-right
+                 $dropdown-link-active-padding-bottom
+                 $dropdown-link-active-padding-left;
+      }
+    }
 
 
-#{$dropdown-class}__caret.fa-chevron-down,
-#{$dropdown-class}__caret.fa-caret-down,
-#{$dropdown-class}__caret.fa-angle-down {
-  @extend %#{$flex-name}--self-y-center;
-  @extend %#{$type-name}--s;
-}
-
-
-#{$dropdown-class}__caret {
-  @extend %hardware-accel;
-  @extend %transform--fast;
-  left: 6px;
-  top: 1px;
-  color: $dropdown-toggler-color;
-  position: relative;
-}
-
-
-.dropped #{$dropdown-class}__caret {
-  top: 1px;
-  @include transform(rotate(180deg));
-}
-
-
-#{$dropdown-class}__caret--left {
-  @extend #{$dropdown-class}__caret;
-  @extend %#{$flex-name}--first;
-  float: left;
-  margin-right: 6px;
-  margin-left: auto;
-}
-
-
-#{$dropdown-class}__caret--right {
-  @extend #{$dropdown-class}__caret;
-  @extend %#{$flex-name}--last;
-  float: right;
-  margin-left: 6px;
-}
-
-
-#{$dropdown-class}__caret--left.fa-chevron-down,
-#{$dropdown-class}__caret--left.fa-caret-down,
-#{$dropdown-class}__caret--right.fa-chevron-down,
-#{$dropdown-class}__caret--right.fa-caret-down {
-  @extend #{$dropdown-class}__caret.fa-caret-down;
-  margin-top: 4%;
-}
-
-
-#{$dropdown-class}__toggler,
-button#{$dropdown-class}__toggler,
-#{$button-class}#{$dropdown-class}__toggler {
-  @extend %#{$flex-name}--y-center;
-  display: inline-block;
-  background: $dropdown-toggler-background;
-  color: $dropdown-toggler-color;
-  border-style: $dropdown-toggler-border-style;
-  border-width: $dropdown-toggler-border-width;
-  border-color: $dropdown-toggler-border-color;
-  border-radius: $dropdown-toggler-border-radius;
-  line-height: $dropdown-toggler-line-height;
-
-  &.hover {
-    @extend %#{$dropdown-name}__toggler--hover;
-  }
-
-  &.active {
-    @extend %#{$dropdown-name}__toggler--active;
-  }
-}
-
-
-#{$dropdown-class}.dropped #{$dropdown-class}__toggler,
-.no-touchevents #{$dropdown-class}.dropped #{$dropdown-class}__toggler:hover {
-  @extend %#{$dropdown-name}__toggler--active;
-}
-
-
-.no-touchevents #{$dropdown-class}__toggler:not(.submit),
-.no-touchevents #{$dropdown-class}__toggler:not([type=submit]):not(.submit) {
-  &:hover {
-    @extend %#{$dropdown-name}__toggler--hover;
-  }
-
-  &:active {
-    @extend %#{$dropdown-name}__toggler--active;
-  }
-}
-
-
-#{$dropdown-class}__menu {
-  @extend %absolute-top;
-  @extend %hardware-accel;
-  @extend %drop-in--fast;
-  visibility: hidden;
-  background: $dropdown-background;
-  border-color: $dropdown-border-color;
-  border-style: $dropdown-border-style;
-  border-width: $dropdown-border-width;
-  border-radius: $dropdown-border-radius;
-  padding: $dropdown-padding-top $dropdown-padding-right
-           $dropdown-padding-bottom $dropdown-padding-left;
-  width: $dropdown-width;
-  min-width: $dropdown-min-width;
-  text-align: $dropdown-text-align;
-  top: 200%;
-  z-index: $MAX-Z-INDEX;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  @include opacity(0.0);
-  @include box-shadow($dropdown-shadow);
-
-  li {
-    a {
-      display: block;
-      clear: both;
+    #{$dropdown-class}__heading {
       white-space: nowrap;
-      color: $dropdown-link-color;
-      background: $dropdown-link-background;
-      border-color: $dropdown-link-border-color;
-      border-style: $dropdown-link-border-style;
-      border-width: $dropdown-link-border-width;
-      padding: $dropdown-link-padding-top $dropdown-link-padding-right
-               $dropdown-link-padding-bottom $dropdown-link-padding-left;
+      clear: both;
+      padding: $dropdown-heading-padding-top $dropdown-heading-padding-right
+               $dropdown-heading-padding-bottom $dropdown-heading-padding-left;
+      @include font-line($dropdown-heading-font-size,
+                         $dropdown-heading-line-height,
+                         $color: $dropdown-heading-color,
+                         $weight: $dropdown-heading-weight);
     }
+
+
+    @include extend-flex(#{$dropdown-name}, (#{$dropdown-class}))
   }
 }
-
-
-.no-touchevents #{$dropdown-class}__menu li a {
-  &:hover {
-    color: $dropdown-link-hover-color;
-    background: $dropdown-link-hover-background;
-    border-color: $dropdown-link-hover-border-color;
-    border-style: $dropdown-link-hover-border-style;
-    border-width: $dropdown-link-hover-border-width;
-    padding: $dropdown-link-hover-padding-top
-             $dropdown-link-hover-padding-right
-             $dropdown-link-hover-padding-bottom
-             $dropdown-link-hover-padding-left;
-  }
-
-  &:active {
-    color: $dropdown-link-active-color;
-    background: $dropdown-link-active-background;
-    border-color: $dropdown-link-active-border-color;
-    border-style: $dropdown-link-active-border-style;
-    border-width: $dropdown-link-active-border-width;
-    padding: $dropdown-link-active-padding-top
-             $dropdown-link-active-padding-right
-             $dropdown-link-active-padding-bottom
-             $dropdown-link-active-padding-left;
-  }
-}
-
-
-#{$dropdown-class}__heading {
-  white-space: nowrap;
-  clear: both;
-  padding: $dropdown-heading-padding-top $dropdown-heading-padding-right
-           $dropdown-heading-padding-bottom $dropdown-heading-padding-left;
-  @include font-line($dropdown-heading-font-size,
-                     $dropdown-heading-line-height,
-                     $color: $dropdown-heading-color,
-                     $weight: $dropdown-heading-weight);
-}
-
-
-@include extend-flex(#{$dropdown-name}, (#{$dropdown-class}))
